// Vitest Snapshot v1

exports[`TabellVisning > rendrer riktig formatert tabell med detaljer 1`] = `
<DocumentFragment>
  <table
    class="navds-table navds-table--medium _table_15ff36"
  >
    <thead
      class="navds-table__header"
    >
      <tr
        class="navds-table__row navds-table__row--shade-on-hover"
      >
        <th
          class="navds-table__header-cell navds-label"
        />
        <th
          class="navds-table__header-cell navds-label"
          scope="col"
        >
          Alder
        </th>
        <th
          class="navds-table__header-cell navds-label _detailsItemRight_15ff36"
          scope="col"
        >
          Sum (kr)
        </th>
      </tr>
    </thead>
    <tbody
      class="navds-table__body"
    >
      <tr
        class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
      >
        <td
          class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
        >
          <button
            aria-controls="r0"
            aria-expanded="false"
            class="navds-table__toggle-expand-button"
            type="button"
          >
            <svg
              aria-labelledby="title-r1"
              class="navds-table__expandable-icon"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-r1"
              >
                Vis mer
              </title>
              <path
                clip-rule="evenodd"
                d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </td>
        <td
          class="navds-table__data-cell navds-body-short"
          scope="row"
        >
          70 år
        </td>
        <td
          class="navds-table__data-cell _detailsItemRight_15ff36 navds-body-short"
        >
          480 000
        </td>
      </tr>
      <tr
        aria-hidden="true"
        class="navds-table__expanded-row"
        id="r0"
      >
        <td
          class="navds-table__expanded-row-cell"
          colspan="999"
        >
          <div
            class="navds-table__expanded-row-collapse"
            style="height: 0px; overflow: hidden;"
          >
            <div
              aria-hidden="true"
              class="navds-table__expanded-row-content"
              style="display: none;"
            >
              <dl
                class="_details_15ff36"
              >
                <dt>
                  Pensjonsgivende inntekt
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  100 000
                </dd>
                <dt>
                  Tjenestepensjon
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  180 000
                </dd>
                <dt>
                  Folketrygden (NAV)
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  200 000
                </dd>
              </dl>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
      >
        <td
          class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
        >
          <button
            aria-controls="r2"
            aria-expanded="false"
            class="navds-table__toggle-expand-button"
            type="button"
          >
            <svg
              aria-labelledby="title-r3"
              class="navds-table__expandable-icon"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-r3"
              >
                Vis mer
              </title>
              <path
                clip-rule="evenodd"
                d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </td>
        <td
          class="navds-table__data-cell navds-body-short"
          scope="row"
        >
          71 år
        </td>
        <td
          class="navds-table__data-cell _detailsItemRight_15ff36 navds-body-short"
        >
          775 000
        </td>
      </tr>
      <tr
        aria-hidden="true"
        class="navds-table__expanded-row"
        id="r2"
      >
        <td
          class="navds-table__expanded-row-cell"
          colspan="999"
        >
          <div
            class="navds-table__expanded-row-collapse"
            style="height: 0px; overflow: hidden;"
          >
            <div
              aria-hidden="true"
              class="navds-table__expanded-row-content"
              style="display: none;"
            >
              <dl
                class="_details_15ff36"
              >
                <dt>
                  Pensjonsgivende inntekt
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  175 000
                </dd>
                <dt>
                  Tjenestepensjon
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  250 000
                </dd>
                <dt>
                  Folketrygden (NAV)
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  350 000
                </dd>
              </dl>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
      >
        <td
          class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
        >
          <button
            aria-controls="r4"
            aria-expanded="false"
            class="navds-table__toggle-expand-button"
            type="button"
          >
            <svg
              aria-labelledby="title-r5"
              class="navds-table__expandable-icon"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-r5"
              >
                Vis mer
              </title>
              <path
                clip-rule="evenodd"
                d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </td>
        <td
          class="navds-table__data-cell navds-body-short"
          scope="row"
        >
          72 år
        </td>
        <td
          class="navds-table__data-cell _detailsItemRight_15ff36 navds-body-short"
        >
          780 000
        </td>
      </tr>
      <tr
        aria-hidden="true"
        class="navds-table__expanded-row"
        id="r4"
      >
        <td
          class="navds-table__expanded-row-cell"
          colspan="999"
        >
          <div
            class="navds-table__expanded-row-collapse"
            style="height: 0px; overflow: hidden;"
          >
            <div
              aria-hidden="true"
              class="navds-table__expanded-row-content"
              style="display: none;"
            >
              <dl
                class="_details_15ff36"
              >
                <dt>
                  Pensjonsgivende inntekt
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  0
                </dd>
                <dt>
                  Tjenestepensjon
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  380 000
                </dd>
                <dt>
                  Folketrygden (NAV)
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  400 000
                </dd>
              </dl>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
      >
        <td
          class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
        >
          <button
            aria-controls="r6"
            aria-expanded="false"
            class="navds-table__toggle-expand-button"
            type="button"
          >
            <svg
              aria-labelledby="title-r7"
              class="navds-table__expandable-icon"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-r7"
              >
                Vis mer
              </title>
              <path
                clip-rule="evenodd"
                d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </td>
        <td
          class="navds-table__data-cell navds-body-short"
          scope="row"
        >
          73 år
        </td>
        <td
          class="navds-table__data-cell _detailsItemRight_15ff36 navds-body-short"
        >
          780 000
        </td>
      </tr>
      <tr
        aria-hidden="true"
        class="navds-table__expanded-row"
        id="r6"
      >
        <td
          class="navds-table__expanded-row-cell"
          colspan="999"
        >
          <div
            class="navds-table__expanded-row-collapse"
            style="height: 0px; overflow: hidden;"
          >
            <div
              aria-hidden="true"
              class="navds-table__expanded-row-content"
              style="display: none;"
            >
              <dl
                class="_details_15ff36"
              >
                <dt>
                  Pensjonsgivende inntekt
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  0
                </dd>
                <dt>
                  Tjenestepensjon
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  380 000
                </dd>
                <dt>
                  Folketrygden (NAV)
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  400 000
                </dd>
              </dl>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
      >
        <td
          class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
        >
          <button
            aria-controls="r8"
            aria-expanded="false"
            class="navds-table__toggle-expand-button"
            type="button"
          >
            <svg
              aria-labelledby="title-r9"
              class="navds-table__expandable-icon"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-r9"
              >
                Vis mer
              </title>
              <path
                clip-rule="evenodd"
                d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </td>
        <td
          class="navds-table__data-cell navds-body-short"
          scope="row"
        >
          74 år
        </td>
        <td
          class="navds-table__data-cell _detailsItemRight_15ff36 navds-body-short"
        >
          780 000
        </td>
      </tr>
      <tr
        aria-hidden="true"
        class="navds-table__expanded-row"
        id="r8"
      >
        <td
          class="navds-table__expanded-row-cell"
          colspan="999"
        >
          <div
            class="navds-table__expanded-row-collapse"
            style="height: 0px; overflow: hidden;"
          >
            <div
              aria-hidden="true"
              class="navds-table__expanded-row-content"
              style="display: none;"
            >
              <dl
                class="_details_15ff36"
              >
                <dt>
                  Pensjonsgivende inntekt
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  0
                </dd>
                <dt>
                  Tjenestepensjon
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  380 000
                </dd>
                <dt>
                  Folketrygden (NAV)
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  400 000
                </dd>
              </dl>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
      >
        <td
          class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
        >
          <button
            aria-controls="ra"
            aria-expanded="false"
            class="navds-table__toggle-expand-button"
            type="button"
          >
            <svg
              aria-labelledby="title-rb"
              class="navds-table__expandable-icon"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-rb"
              >
                Vis mer
              </title>
              <path
                clip-rule="evenodd"
                d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </td>
        <td
          class="navds-table__data-cell navds-body-short"
          scope="row"
        >
          75 år
        </td>
        <td
          class="navds-table__data-cell _detailsItemRight_15ff36 navds-body-short"
        >
          780 000
        </td>
      </tr>
      <tr
        aria-hidden="true"
        class="navds-table__expanded-row"
        id="ra"
      >
        <td
          class="navds-table__expanded-row-cell"
          colspan="999"
        >
          <div
            class="navds-table__expanded-row-collapse"
            style="height: 0px; overflow: hidden;"
          >
            <div
              aria-hidden="true"
              class="navds-table__expanded-row-content"
              style="display: none;"
            >
              <dl
                class="_details_15ff36"
              >
                <dt>
                  Pensjonsgivende inntekt
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  0
                </dd>
                <dt>
                  Tjenestepensjon
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  380 000
                </dd>
                <dt>
                  Folketrygden (NAV)
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  400 000
                </dd>
              </dl>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
      >
        <td
          class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
        >
          <button
            aria-controls="rc"
            aria-expanded="false"
            class="navds-table__toggle-expand-button"
            type="button"
          >
            <svg
              aria-labelledby="title-rd"
              class="navds-table__expandable-icon"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-rd"
              >
                Vis mer
              </title>
              <path
                clip-rule="evenodd"
                d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </td>
        <td
          class="navds-table__data-cell navds-body-short"
          scope="row"
        >
          76 år
        </td>
        <td
          class="navds-table__data-cell _detailsItemRight_15ff36 navds-body-short"
        >
          780 000
        </td>
      </tr>
      <tr
        aria-hidden="true"
        class="navds-table__expanded-row"
        id="rc"
      >
        <td
          class="navds-table__expanded-row-cell"
          colspan="999"
        >
          <div
            class="navds-table__expanded-row-collapse"
            style="height: 0px; overflow: hidden;"
          >
            <div
              aria-hidden="true"
              class="navds-table__expanded-row-content"
              style="display: none;"
            >
              <dl
                class="_details_15ff36"
              >
                <dt>
                  Pensjonsgivende inntekt
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  0
                </dd>
                <dt>
                  Tjenestepensjon
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  380 000
                </dd>
                <dt>
                  Folketrygden (NAV)
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  400 000
                </dd>
              </dl>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
      >
        <td
          class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
        >
          <button
            aria-controls="re"
            aria-expanded="false"
            class="navds-table__toggle-expand-button"
            type="button"
          >
            <svg
              aria-labelledby="title-rf"
              class="navds-table__expandable-icon"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-rf"
              >
                Vis mer
              </title>
              <path
                clip-rule="evenodd"
                d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </td>
        <td
          class="navds-table__data-cell navds-body-short"
          scope="row"
        >
          77+ (livsvarig)
        </td>
        <td
          class="navds-table__data-cell _detailsItemRight_15ff36 navds-body-short"
        >
          780 000
        </td>
      </tr>
      <tr
        aria-hidden="true"
        class="navds-table__expanded-row"
        id="re"
      >
        <td
          class="navds-table__expanded-row-cell"
          colspan="999"
        >
          <div
            class="navds-table__expanded-row-collapse"
            style="height: 0px; overflow: hidden;"
          >
            <div
              aria-hidden="true"
              class="navds-table__expanded-row-content"
              style="display: none;"
            >
              <dl
                class="_details_15ff36"
              >
                <dt>
                  Pensjonsgivende inntekt
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  0
                </dd>
                <dt>
                  Tjenestepensjon
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  380 000
                </dd>
                <dt>
                  Folketrygden (NAV)
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  400 000
                </dd>
              </dl>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TabellVisning > rendrer riktig formatert tabell med detaljer 2`] = `
<DocumentFragment>
  <table
    class="navds-table navds-table--medium _table_15ff36"
  >
    <thead
      class="navds-table__header"
    >
      <tr
        class="navds-table__row navds-table__row--shade-on-hover"
      >
        <th
          class="navds-table__header-cell navds-label"
        />
        <th
          class="navds-table__header-cell navds-label"
          scope="col"
        >
          Alder
        </th>
        <th
          class="navds-table__header-cell navds-label _detailsItemRight_15ff36"
          scope="col"
        >
          Sum (kr)
        </th>
      </tr>
    </thead>
    <tbody
      class="navds-table__body"
    >
      <tr
        class="navds-table__row navds-table__expandable-row navds-table__expandable-row--open navds-table__row--shade-on-hover"
      >
        <td
          class="navds-table__data-cell navds-table__toggle-expand-cell navds-table__toggle-expand-cell--open navds-body-short"
        >
          <button
            aria-controls="r0"
            aria-expanded="true"
            class="navds-table__toggle-expand-button"
            type="button"
          >
            <svg
              aria-labelledby="title-r1"
              class="navds-table__expandable-icon"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-r1"
              >
                Vis mindre
              </title>
              <path
                clip-rule="evenodd"
                d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </td>
        <td
          class="navds-table__data-cell navds-body-short"
          scope="row"
        >
          70 år
        </td>
        <td
          class="navds-table__data-cell _detailsItemRight_15ff36 navds-body-short"
        >
          480 000
        </td>
      </tr>
      <tr
        aria-hidden="false"
        class="navds-table__expanded-row"
        id="r0"
      >
        <td
          class="navds-table__expanded-row-cell"
          colspan="999"
        >
          <div
            class="navds-table__expanded-row-collapse"
            style="height: 0px; overflow: hidden; transition: height 250ms ease 0ms;"
          >
            <div
              aria-hidden="false"
              class="navds-table__expanded-row-content"
              style=""
            >
              <dl
                class="_details_15ff36"
              >
                <dt>
                  Pensjonsgivende inntekt
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  100 000
                </dd>
                <dt>
                  Tjenestepensjon
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  180 000
                </dd>
                <dt>
                  Folketrygden (NAV)
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  200 000
                </dd>
              </dl>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
      >
        <td
          class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
        >
          <button
            aria-controls="r2"
            aria-expanded="false"
            class="navds-table__toggle-expand-button"
            type="button"
          >
            <svg
              aria-labelledby="title-r3"
              class="navds-table__expandable-icon"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-r3"
              >
                Vis mer
              </title>
              <path
                clip-rule="evenodd"
                d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </td>
        <td
          class="navds-table__data-cell navds-body-short"
          scope="row"
        >
          71 år
        </td>
        <td
          class="navds-table__data-cell _detailsItemRight_15ff36 navds-body-short"
        >
          775 000
        </td>
      </tr>
      <tr
        aria-hidden="true"
        class="navds-table__expanded-row"
        id="r2"
      >
        <td
          class="navds-table__expanded-row-cell"
          colspan="999"
        >
          <div
            class="navds-table__expanded-row-collapse"
            style="height: 0px; overflow: hidden;"
          >
            <div
              aria-hidden="true"
              class="navds-table__expanded-row-content"
              style="display: none;"
            >
              <dl
                class="_details_15ff36"
              >
                <dt>
                  Pensjonsgivende inntekt
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  175 000
                </dd>
                <dt>
                  Tjenestepensjon
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  250 000
                </dd>
                <dt>
                  Folketrygden (NAV)
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  350 000
                </dd>
              </dl>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
      >
        <td
          class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
        >
          <button
            aria-controls="r4"
            aria-expanded="false"
            class="navds-table__toggle-expand-button"
            type="button"
          >
            <svg
              aria-labelledby="title-r5"
              class="navds-table__expandable-icon"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-r5"
              >
                Vis mer
              </title>
              <path
                clip-rule="evenodd"
                d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </td>
        <td
          class="navds-table__data-cell navds-body-short"
          scope="row"
        >
          72 år
        </td>
        <td
          class="navds-table__data-cell _detailsItemRight_15ff36 navds-body-short"
        >
          780 000
        </td>
      </tr>
      <tr
        aria-hidden="true"
        class="navds-table__expanded-row"
        id="r4"
      >
        <td
          class="navds-table__expanded-row-cell"
          colspan="999"
        >
          <div
            class="navds-table__expanded-row-collapse"
            style="height: 0px; overflow: hidden;"
          >
            <div
              aria-hidden="true"
              class="navds-table__expanded-row-content"
              style="display: none;"
            >
              <dl
                class="_details_15ff36"
              >
                <dt>
                  Pensjonsgivende inntekt
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  0
                </dd>
                <dt>
                  Tjenestepensjon
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  380 000
                </dd>
                <dt>
                  Folketrygden (NAV)
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  400 000
                </dd>
              </dl>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
      >
        <td
          class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
        >
          <button
            aria-controls="r6"
            aria-expanded="false"
            class="navds-table__toggle-expand-button"
            type="button"
          >
            <svg
              aria-labelledby="title-r7"
              class="navds-table__expandable-icon"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-r7"
              >
                Vis mer
              </title>
              <path
                clip-rule="evenodd"
                d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </td>
        <td
          class="navds-table__data-cell navds-body-short"
          scope="row"
        >
          73 år
        </td>
        <td
          class="navds-table__data-cell _detailsItemRight_15ff36 navds-body-short"
        >
          780 000
        </td>
      </tr>
      <tr
        aria-hidden="true"
        class="navds-table__expanded-row"
        id="r6"
      >
        <td
          class="navds-table__expanded-row-cell"
          colspan="999"
        >
          <div
            class="navds-table__expanded-row-collapse"
            style="height: 0px; overflow: hidden;"
          >
            <div
              aria-hidden="true"
              class="navds-table__expanded-row-content"
              style="display: none;"
            >
              <dl
                class="_details_15ff36"
              >
                <dt>
                  Pensjonsgivende inntekt
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  0
                </dd>
                <dt>
                  Tjenestepensjon
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  380 000
                </dd>
                <dt>
                  Folketrygden (NAV)
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  400 000
                </dd>
              </dl>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
      >
        <td
          class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
        >
          <button
            aria-controls="r8"
            aria-expanded="false"
            class="navds-table__toggle-expand-button"
            type="button"
          >
            <svg
              aria-labelledby="title-r9"
              class="navds-table__expandable-icon"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-r9"
              >
                Vis mer
              </title>
              <path
                clip-rule="evenodd"
                d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </td>
        <td
          class="navds-table__data-cell navds-body-short"
          scope="row"
        >
          74 år
        </td>
        <td
          class="navds-table__data-cell _detailsItemRight_15ff36 navds-body-short"
        >
          780 000
        </td>
      </tr>
      <tr
        aria-hidden="true"
        class="navds-table__expanded-row"
        id="r8"
      >
        <td
          class="navds-table__expanded-row-cell"
          colspan="999"
        >
          <div
            class="navds-table__expanded-row-collapse"
            style="height: 0px; overflow: hidden;"
          >
            <div
              aria-hidden="true"
              class="navds-table__expanded-row-content"
              style="display: none;"
            >
              <dl
                class="_details_15ff36"
              >
                <dt>
                  Pensjonsgivende inntekt
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  0
                </dd>
                <dt>
                  Tjenestepensjon
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  380 000
                </dd>
                <dt>
                  Folketrygden (NAV)
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  400 000
                </dd>
              </dl>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
      >
        <td
          class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
        >
          <button
            aria-controls="ra"
            aria-expanded="false"
            class="navds-table__toggle-expand-button"
            type="button"
          >
            <svg
              aria-labelledby="title-rb"
              class="navds-table__expandable-icon"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-rb"
              >
                Vis mer
              </title>
              <path
                clip-rule="evenodd"
                d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </td>
        <td
          class="navds-table__data-cell navds-body-short"
          scope="row"
        >
          75 år
        </td>
        <td
          class="navds-table__data-cell _detailsItemRight_15ff36 navds-body-short"
        >
          780 000
        </td>
      </tr>
      <tr
        aria-hidden="true"
        class="navds-table__expanded-row"
        id="ra"
      >
        <td
          class="navds-table__expanded-row-cell"
          colspan="999"
        >
          <div
            class="navds-table__expanded-row-collapse"
            style="height: 0px; overflow: hidden;"
          >
            <div
              aria-hidden="true"
              class="navds-table__expanded-row-content"
              style="display: none;"
            >
              <dl
                class="_details_15ff36"
              >
                <dt>
                  Pensjonsgivende inntekt
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  0
                </dd>
                <dt>
                  Tjenestepensjon
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  380 000
                </dd>
                <dt>
                  Folketrygden (NAV)
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  400 000
                </dd>
              </dl>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
      >
        <td
          class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
        >
          <button
            aria-controls="rc"
            aria-expanded="false"
            class="navds-table__toggle-expand-button"
            type="button"
          >
            <svg
              aria-labelledby="title-rd"
              class="navds-table__expandable-icon"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-rd"
              >
                Vis mer
              </title>
              <path
                clip-rule="evenodd"
                d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </td>
        <td
          class="navds-table__data-cell navds-body-short"
          scope="row"
        >
          76 år
        </td>
        <td
          class="navds-table__data-cell _detailsItemRight_15ff36 navds-body-short"
        >
          780 000
        </td>
      </tr>
      <tr
        aria-hidden="true"
        class="navds-table__expanded-row"
        id="rc"
      >
        <td
          class="navds-table__expanded-row-cell"
          colspan="999"
        >
          <div
            class="navds-table__expanded-row-collapse"
            style="height: 0px; overflow: hidden;"
          >
            <div
              aria-hidden="true"
              class="navds-table__expanded-row-content"
              style="display: none;"
            >
              <dl
                class="_details_15ff36"
              >
                <dt>
                  Pensjonsgivende inntekt
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  0
                </dd>
                <dt>
                  Tjenestepensjon
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  380 000
                </dd>
                <dt>
                  Folketrygden (NAV)
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  400 000
                </dd>
              </dl>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="navds-table__row navds-table__expandable-row navds-table__row--shade-on-hover"
      >
        <td
          class="navds-table__data-cell navds-table__toggle-expand-cell navds-body-short"
        >
          <button
            aria-controls="re"
            aria-expanded="false"
            class="navds-table__toggle-expand-button"
            type="button"
          >
            <svg
              aria-labelledby="title-rf"
              class="navds-table__expandable-icon"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-rf"
              >
                Vis mer
              </title>
              <path
                clip-rule="evenodd"
                d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </td>
        <td
          class="navds-table__data-cell navds-body-short"
          scope="row"
        >
          77+ (livsvarig)
        </td>
        <td
          class="navds-table__data-cell _detailsItemRight_15ff36 navds-body-short"
        >
          780 000
        </td>
      </tr>
      <tr
        aria-hidden="true"
        class="navds-table__expanded-row"
        id="re"
      >
        <td
          class="navds-table__expanded-row-cell"
          colspan="999"
        >
          <div
            class="navds-table__expanded-row-collapse"
            style="height: 0px; overflow: hidden;"
          >
            <div
              aria-hidden="true"
              class="navds-table__expanded-row-content"
              style="display: none;"
            >
              <dl
                class="_details_15ff36"
              >
                <dt>
                  Pensjonsgivende inntekt
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  0
                </dd>
                <dt>
                  Tjenestepensjon
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  380 000
                </dd>
                <dt>
                  Folketrygden (NAV)
                </dt>
                <dd
                  class="_detailsItemRight_15ff36"
                >
                  400 000
                </dd>
              </dl>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
